kubernetes/shell.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell
spec:
  volumes:
  - name: shared-data
    emptyDir: {}
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: shared-data
      mountPath: /usr/share/nginx/html
  securityContext:
    fsGroup: 1000
  hostNetwork: true
  dnsPolicy: Default
