kubernetes/deploy_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finances-easy-api
  namespace: finances
  labels:
    app: finances-easy-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finances-easy-api
  template:
    metadata:
      labels:
        app: finances-easy-api
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8089'
        prometheus.io/path: '/actuator/prometheus'
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: finances-easy-api-secret
        - secretRef:
            name: finances-okta-secret
        name: finances-easy-api
        image: alexandre3gomes/finances-easy-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: finances-easy-api-svc
  namespace: finances
spec:
  type: ClusterIP
  selector:
    app: finances-easy-api
  ports:
  - port: 8089
    protocol: TCP
    targetPort: 8089
