kubernetes/deploy-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finances-easy-api
  namespace: finances
  labels:
    app: finances-easy-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finances-easy-api
  template:
    metadata:
      labels:
        app: finances-easy-api
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: finances-easy-api-secret
        name: finances-easy-api
        image: alexandre3gomes/finances-easy-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: finances-easy-api-svc
  namespace: finances
spec:
  type: ClusterIP
  selector:
    app: finances-easy-api
  ports:
  - port: 8089
    protocol: TCP
    targetPort: 8089
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finances-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: 47a43729-0b35-4e05-9b55-b2e57dc9c22a.nodes.k8s.fr-par.scw.cloud
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: finances-easy-api-svc
            port:
              number: 8089
