kubernetes/local-dep.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finances-easy-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: finances-easy-api-svc
            port:
              number: 8089
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finances-easy-web-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finances-easy-web-svc
            port:
              number: 80
