kubernetes/local_dep.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finances-easy-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - 10646724a8dc.ngrok.io
    secretName: finances-easy-tls
  rules:
  - host: 10646724a8dc.ngrok.io
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: finances-easy-api-svc
            port:
              number: 8089
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finances-easy-web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - 10646724a8dc.ngrok.io
    secretName: finances-easy-tls
  rules:
  - host: 10646724a8dc.ngrok.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finances-easy-web-svc
            port:
              number: 80
