kubernetes/monitor_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-ingress
  namespace: kube-prometheus-stack
spec:
  rules:
  - host: grafana.finances-easy.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
